RESOLVED FIXED19134
Inspector should support console.assert
https://bugs.webkit.org/show_bug.cgi?id=19134
Summary Inspector should support console.assert
Adam Roben (:aroben)
Reported 2008-05-19 21:54:37 PDT
We should support Firebug's console.assert method.
Attachments
patch v1 + ChangeLog (9.33 KB, patch)
2008-05-19 22:23 PDT, Adam Roben (:aroben)
timothy: review+
Adam Roben (:aroben)
Comment 1 2008-05-19 22:23:42 PDT
Created attachment 21249 [details] patch v1 + ChangeLog
Adam Roben (:aroben)
Comment 2 2008-05-20 16:08:34 PDT
Committed in r33946
Note You need to log in before you can comment on or make changes to this bug.