WebCore/page/Console.h
@@ -70,6 +70,7 @@ namespace WebCore {
         void info(KJS::ExecState*, const KJS::List& arguments);
         void log(KJS::ExecState*, const KJS::List& arguments);
         void warn(KJS::ExecState*, const KJS::List& arguments);
+        void assertCondition(bool condition, KJS::ExecState*, const KJS::List& arguments);
         void profile(KJS::ExecState*, const KJS::List& arguments) const;
         void profileEnd() const;
 
